# bopt

./: CMakeLists.txt  README.md
bopt/: CMakeLists.txt  binding.h  binding.hpp  bounds.cpp  bounds.hpp  common.hpp  constraints.hpp  costs.hpp  dlib_handler.hpp  eigen.h  evaluator.hpp  fwd.hpp  logging.hpp  optional_matrix.hpp  profiler.cpp  profiler.hpp  program.cpp  program.h  program.hpp  sparse.hpp  types.hpp  variable.cpp  variable.hpp
bopt/ad/casadi/: README.md  casadi.hpp  codegen.cpp  codegen.hpp  constraint.hpp  constraints.hpp  costs.hpp  eigen.cpp  eigen.hpp  evaluator.hpp  expression.hpp  function.hpp
bopt/solvers/: README.md  base.cpp  base.h  ipopt.cpp  ipopt.h  ipopt.hpp  qpoases.cpp  qpoases.h  qpoases.hpp
cmake/: boptConfig.cmake.in
doc/: Doxyfile
test/: CMakeLists.txt
test/casadi/: codegen.cc  collocation.cc  constraint.cc  eigen.cc  function.cc
test/common/: profiler.cc
test/control/: task.cc
test/core/: constraint.cpp  evaluator.cpp  function.cc  sparse.cpp
test/optimisation/: binding.cc  constraint_vector.cc  objective_function.cc
test/solvers/: ipopt.cc  qpoases.cc  sparse.cc
test/symbolic/: variable.cc
